Ctrl+F in text editor opens Toolbar, but no longer closes it #36724

Closed
opened 2013-09-13 19:04:07 +02:00 by Greg Zaal · 9 comments
Member

%%%--- Blender version with error, and version that worked ---
Worked in 2.66a, been broken in 2.67 and since

- Short description of error ---

Hitting Ctrl+F will open the toolbar and focus on the Find field. Once the toolbar was open, ctrl+F again would now close the toolbar, however it no longer does this and simply remains open, forcing the user to switch hands to the mouse and try to find those few pixels on the edge of the bar to drag.
%%%

%%%--- Blender version with error, and version that worked --- Worked in 2.66a, been broken in 2.67 and since - Short description of error --- Hitting Ctrl+F will open the toolbar and focus on the Find field. Once the toolbar was open, ctrl+F again would now close the toolbar, however it no longer does this and simply remains open, forcing the user to switch hands to the mouse and try to find those few pixels on the edge of the bar to drag. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Confirmed, Linux 64bit%%%

%%%Confirmed, Linux 64bit%%%

%%%Ton, this seems to have been introduced in rev. 55549.
Was this behaviour intentional?

If so we need a shortcut for View > Properties
Otherwise we need:


diff --git b/source/blender/editors/space_text/text_header.c a/source/blender/editors/space_text/text_header.c
index aaeea40..46d3703 100644
- b/source/blender/editors/space_text/text_header.c
+++ a/source/blender/editors/space_text/text_header.c
@@ -120,8 +120,7 @@ static int text_text_search_exec(bContext *C, wmOperator *UNUSED(op))
SpaceText *st = CTX_wm_space_text(C);

if (ar) {
  • if (ar->flag & RGN_FLAG_HIDDEN)
  • ED_region_toggle_hidden(C, ar);
  •   ED_region_toggle_hidden(C, ar);
    
      /* cannot send a button activate yet for case when region wasn't visible yet */
      /* flag gets checked and cleared in main draw callback */
        - %%%
%%%Ton, this seems to have been introduced in rev. 55549. Was this behaviour intentional? If so we need a shortcut for View > Properties Otherwise we need: **** diff --git b/source/blender/editors/space_text/text_header.c a/source/blender/editors/space_text/text_header.c index aaeea40..46d3703 100644 - b/source/blender/editors/space_text/text_header.c +++ a/source/blender/editors/space_text/text_header.c @@ -120,8 +120,7 @@ static int text_text_search_exec(bContext *C, wmOperator *UNUSED(op)) SpaceText *st = CTX_wm_space_text(C); if (ar) { - if (ar->flag & RGN_FLAG_HIDDEN) - ED_region_toggle_hidden(C, ar); + ED_region_toggle_hidden(C, ar); /* cannot send a button activate yet for case when region wasn't visible yet */ /* flag gets checked and cleared in main draw callback */ - %%%

%%%It seems best to add a new shortcut here.

The behavior was changed so you could focus on the Find field with ctrl+F. That was the original purpose of this shortcut anyway, but this wasn't working yet, and I guess people started using this as a shortcut to open/close the properties.%%%

%%%It seems best to add a new shortcut here. The behavior was changed so you could focus on the Find field with ctrl+F. That was the original purpose of this shortcut anyway, but this wasn't working yet, and I guess people started using this as a shortcut to open/close the properties.%%%

%%%Fixed by adding Ctl + P as shortcut for show Properties. r60270, thanks for reporting.
There is still a related 'bug', if you look at the Edit menu 'Find' shows the shortcut Ctrl+P.
I'll look at it, but I'm closing this right now%%%

%%%Fixed by adding Ctl + P as shortcut for show Properties. r60270, thanks for reporting. There is still a related 'bug', if you look at the Edit menu 'Find' shows the shortcut Ctrl+P. I'll look at it, but I'm closing this right now%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%changed shortcut to Ctrl+T in rev. 60444
(so it's more consistent with having left panel opening on T)%%%

%%%changed shortcut to Ctrl+T in rev. 60444 (so it's more consistent with having left panel opening on T)%%%
Member

%%%So it is like this now?

while closed

ctrl-f = open w/cursor in find operator
ctrl-t = regular tool panel open, no cursor placement

while open

ctrl-f = changes nothing since it is open
ctrl-t = close the panel   

I would suggest adding the logic of

while open ctrl-f sets the cursor in the find operator

%%%

%%%So it is like this now? while closed ``` ctrl-f = open w/cursor in find operator ctrl-t = regular tool panel open, no cursor placement ``` while open ``` ctrl-f = changes nothing since it is open ctrl-t = close the panel ``` I would suggest adding the logic of ``` while open ctrl-f sets the cursor in the find operator ``` %%%

%%%> 'while open ctrl-f sets the cursor in the find operator'
That's the current behaviour already.%%%

%%%> 'while open ctrl-f sets the cursor in the find operator' That's the current behaviour already.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36724
No description provided.