bugfix [#36724] Ctrl+F in text editor opens Toolbar, but no longer closes it

(added Ctrl+P as a toggle to show Properties)